compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__use___wrong_callback_arg_2.snap
---
source: compiler-core/src/type_/tests/use_.rs
expression: "\npub record Box {\n  Box<Int>\n}\n\npub fn main() {\n  let x = fn(f) { \"Hello, \" ++ f(Box(1)) }\n  use Box(\"hi\") <- x()\n  \"Giacomo!\"\n}\n"
---
----- SOURCE CODE

pub record Box {
  Box(Int)
}

pub fn main() {
  let x = fn(f) { "Hello, " ++ f(Box(1)) }
  use Box("hi") <- x()
  "Giacomo!"
}


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.rakun:8:11
  │
8 │   use Box("hi") <- x()
  │           ^^^^

Expected type:

    Int

Found type:

    String
